public/css/integrate.css
/* integrate.css */
.select2-selection__placeholder {
	line-height:36px;
}
.select2-container--default .select2-search--dropdown .select2-search__field:focus {
	outline:none;
	border:1px solid #74b164;
}
.promofree, .zerorisk, .simple {
	height:310px;
	color:white;
	padding:0;
}
.promofree .full, .zerorisk .full, .simple .full {
	height:310px;
	position:relative;
	display:table;
	line-height:310px;
	padding:0;
}
.promofree h1, .zerorisk h1, .simple h1 {
	height:100%;
	line-height:310px;
	display: inline-block;
	width:auto;
	font-size:5.5em;
	letter-spacing:-2px;
	font-weight:400;
	margin:0;
	color:white;
}
.promofree h1 {
	margin-top:-.25em;
	position:relative;
}
.promofree h1 small {
	display:block;
	position:absolute;
	top:1.5em;
	font-size:.5em;
}
.promofree h1, .simple h1 {
	float:left;
	text-align:left;
	width:470px;
}
.promofree p, .simple p {
	float:right;
	text-align: left;
}
.promofree p {
	margin-top:2.5em;
}
.simple p {
	margin-top:3.25em;
}
.zerorisk p {
	/*float:left;*/
	text-align:left;
}
.zerorisk h1 {
	float:right;
	text-align: right;
}
.promofree p, .zerorisk p, .simple p {
	font-size:1.5em;
	display:inline-block;
	width:auto;
	vertical-align: middle;
	max-width:40%;
	line-height:normal;
	letter-spacing:-2px;
	font-weight:400;
	color:white;
}
.promofree {
	background:#74b164;
}
.zerorisk {
	background:#333333;
}
.simple {
	background:#796a4d;
}

